--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
   --halfCircleThree: rgba(253, 110, 10, 10%);
   --whiteHero: #fff8f3;
 }
-body {
+body:not(i) {
   font-family: "Open Sans", serif;
 }
 * {
@@ -28,13 +28,21 @@ p {
 }
 /* button style */
 .btn-primary {
-  padding: 18px 36px;
-  font-size: 20px;
+  padding: 16px 33px;
+  font-size: 16px;
   background-color: var(--orangeColor);
   border-radius: 5px;
   font-weight: 700;
   color: var(--whiteHero);
   border: none;
+}
+i {
+  font-size: 16px;
+  color: var(--whiteHero);
+  margin-right: 9px;
+}
+.fa-phone {
+  color: var(--orangeColor);
 }
 header {
   background-color: var(--whiteHero);
@@ -133,7 +141,7 @@ main h3.h3-title {
   justify-content: space-evenly;
 }
 .technical-skill {
-  padding: 110px 0px;
+  padding: 110px 0px 70px 0;
 }
 .technical-skill > p {
   padding: 30px 170px;
@@ -158,4 +166,94 @@ main h3.h3-title {
 }
 .skill p {
   font-size: 16px;
+}
+
+.resume-section {
+  padding: 30px 0px;
+}
+.resume {
+  display: flex;
+  justify-content: space-around;
+  margin: 100px 0 50px 0;
+}
+.resume-title,
+h4 {
+  color: var(--darkLightTwo);
+}
+.resume-title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+.educations,
+.experiences {
+  text-align: start;
+  width: 400px;
+  & .education,
+  .experience > h4 {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+}
+.education p,
+.experience p {
+  color: var(--darkLightOne);
+  font-size: 13px;
+  margin: 15px 0;
+}
+.education h5,
+.experience h5 {
+  color: var(--darkLightOne);
+  font-size: 15px;
+}
+
+/* footer styles */
+footer {
+  background-color: var(--whiteHero);
+}
+
+.contact-form {
+  padding: 110px 200px;
+  display: flex;
+  gap: 100px;
+}
+
+.contact {
+  width: 500px;
+}
+.contact h3 {
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--darkDeep);
+}
+.contact p {
+  font-size: 15px;
+  margin: 20px 0;
+}
+.contact h3,
+form h3 {
+  font-size: 28px;
+  font-weight: bold;
+  color: var(--darkDeep);
+}
+.contact img {
+  margin-right: 15px;
+}
+
+form > input {
+  display: block;
+  padding: 10px 17px;
+  width: 300px;
+  border: none;
+  font-size: 16px;
+  border-radius: 5px;
+  margin: 25px 0;
+}
+form > textarea {
+  width: 300px;
+  height: 100px;
+  font-size: 16px;
+  padding: 10px;
+  margin-bottom: 20px;
+  resize: none;
 }
