--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,6 +10,11 @@
   --halfCircleThree: rgba(253, 110, 10, 10%);
   --whiteHero: #fff8f3;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 body:not(i) {
   font-family: "Open Sans", serif;
 }
@@ -255,18 +260,72 @@ form > textarea {
 }
 /* responsive media query */
 @media screen and (max-width: 576px) {
-  .technical-skill {
+  header,
+  main,
+  footer,
+  section {
     width: 100%;
-    padding: 40px 0;
   }
-  .technical-skill > p {
+  header {
+    background-image: none;
+  }
+
+  .banner {
+    flex-direction: column;
+  }
+  nav {
+    align-items: center;
+    margin: 0;
+    padding: 45px 10px 0 10px;
+  }
+  nav ul li:not(:last-child) {
+    display: none;
+  }
+  .banner {
+    margin: 0;
+    flex-direction: column-reverse;
+    padding: 0 6px;
+  }
+  .banner-content {
+    width: 100%;
+    margin-top: 50px;
+    text-align: center;
+  }
+  .banner .banner-content h3 {
+    font-size: 30px;
+  }
+  .banner .banner-content h1 {
+    font-size: 40px;
+  }
+  .banner .banner-content p,
+  .about > p {
+    font-size: 15px;
+    margin: 0;
     padding: 5px;
   }
-  .all-skills {
-    flex-direction: column;
-    align-items: center;
+  .banner .banner-content button {
+    margin: 10px 0;
   }
-  .all-skills .skill {
-    max-width: 300px;
+  .banner .banner-profile-pic img {
+    width: 100%;
+    margin-top: 100px;
+  }
+  main {
+    margin: 0;
+  }
+  .about {
+    margin-top: 100px;
+    padding: 50px 0;
+  }
+  .about-items {
+    margin-top: 30px;
+    flex-direction: column;
+  }
+  .about-items .item {
+    margin-top: 20px;
+  }
+  main h3.h3-title {
+    font-size: 30px;
+    margin-bottom: 30px;
   }
 }
